--- a/.github/workflows/run-terraform.yml
+++ b/.github/workflows/run-terraform.yml
@@ -17,7 +17,6 @@ env:
   TF_WORKING_DIR: terraform/
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  # BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE}}
 
 
 jobs:
@@ -26,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform
+        working-directory: ${{ env.TF_WORKING_DIR }}
 
   steps:
     - name: Checkout the repository to the runner
