--- a/.github/workflows/run-terraform.yml
+++ b/.github/workflows/run-terraform.yml
@@ -18,7 +18,6 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-
 jobs:
   terraform:
     name: Terraform
@@ -37,24 +36,15 @@ jobs:
         terraform_version: 1.9.3
 
     - name: Terraform init
-      id:
-        init
-      run:
-        terraform init -backend-config="bucket=terraform-state-logs"
+      id: init
+      run: terraform init -backend-config="bucket=terraform-state-logs"
 
     - name: Terraform plan
-      id:
-        plan
-      working-directory:
-        ${{ env.TF_WORKING_DIR }}
-      run:
+      id: plan
+      run: |
         terraform plan -input=false -out=tfplan \
         && terraform show -no-color tfplan
 
     - name: Terraform Apply
-      if:
-        github.ref == 'refs/heads/main'
-      working-directory:
-        ${{ env.TF_WORKING_DIR }}
-      run:
-        terraform apply -auto-approve
+      if: github.ref == 'refs/heads/main'
+      run: terraform apply -auto-approve
