--- a/.github/workflows/run-terraform.yml
+++ b/.github/workflows/run-terraform.yml
@@ -28,7 +28,7 @@ jobs:
 
   steps:
     - name: Checkout the repository to the runner
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Setup Terraform with specified version on the runner
       uses: hashicorp/setup-terraform@v2
@@ -46,5 +46,5 @@ jobs:
         && terraform show -no-color tfplan
 
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/main'
+      if: ${{ github.ref == 'refs/heads/main' }}
       run: terraform apply -auto-approve
